# mcp-server-poc

./: pom.xml
mcp-client/claims-capture-agent/: .gitignore  dashboard.py  main.py  mcp_config.json  pyproject.toml  watcher.py
mcp-client/claims-capture-agent/src/: agent_llm_auto_http.py  claim_status_client.py  java_llm_http.py  pdf_extractor.py
mcp-server-java/: .gitignore  claims.db  docker-compose.yml  pom.xml
mcp-server-java/src/main/java/com/solusoft/ai/mcp/: McpServerApplication.java
mcp-server-java/src/main/java/com/solusoft/ai/mcp/aspect/: McpAuditAspect.java
mcp-server-java/src/main/java/com/solusoft/ai/mcp/config/: McpJdbcConfig.java  McpSecurityConfig.java  RequestIdFilter.java  SQLiteConfig.java  SoapConfig.java
mcp-server-java/src/main/java/com/solusoft/ai/mcp/exception/: Case360IntegrationException.java  GlobalExceptionHandler.java
mcp-server-java/src/main/java/com/solusoft/ai/mcp/health/: Case360HealthIndicator.java
mcp-server-java/src/main/java/com/solusoft/ai/mcp/security/: McpAuthProperties.java  McpHeaderAuthenticationFilter.java
mcp-server-java/src/main/resources/: application.properties  logback-spring.xml
mcp-server-java/src/main/resources/db/migration/: V1__Initial_Schema.sql  V2__Create_Api_Keys_Table.sql
mcp-server-java/src/test/java/com/solusoft/ai/claims_mcp_server/: ClaimsMcpServerApplicationTests.java
mcp-server-java/src/test/java/com/solusoft/ai/mcp/: ClaimsMcpServerApplicationTests.java
src/main/java/com/solusoft/ai/mcp/integration/case360/: Case360Client.java
src/main/resources/: Case360.wsdl
(+20 files in other folders)
